bad/var_decl_init_invalid_conversion_string_class.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_string_class.lat:5:11: [1;31merror: [0;1mincompatible types: cannot assign variable of type `string` with an expression of type `Y`[m
	string x = new Y;
	         [1;32m^[m
